; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_http_parse_header.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_http_parse_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_str = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mg_http_parse_header(%struct.mg_str* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.mg_str*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store %struct.mg_str* %0, %struct.mg_str** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i8*, i8** %8, align 8
  store i8* %12, i8** %10, align 8
  %13 = load %struct.mg_str*, %struct.mg_str** %6, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i64, i64* %9, align 8
  %16 = call i32 @mg_http_parse_header2(%struct.mg_str* %13, i8* %14, i8** %10, i64 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = icmp ne i8* %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %4
  %21 = load i8*, i8** %10, align 8
  %22 = call i32 @MG_FREE(i8* %21)
  store i32 0, i32* %5, align 4
  br label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %11, align 4
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %23, %20
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @mg_http_parse_header2(%struct.mg_str*, i8*, i8**, i64) #1

declare dso_local i32 @MG_FREE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
